--- a/templates/select_course.html
+++ b/templates/select_course.html
@@ -12,6 +12,8 @@
     </select>
     <br><br>
     <input type="submit" value="Enter Chat">
+    <br><br>
+    <input type="get_query" value = "Get Questions">
   </form>
 </body>
 </html>
